# Kokoro-FastAPI

./: .gitignore  pyproject.toml  run_koko.sh  test.py
api/src/builds/: istftnet.py  models.py  plbert.py
api/src/services/: tts_base.py  tts_gpu.py  tts_model.py  tts_service.py
