[project]
name = "kokoro-fastapi"
version = "0.1.0"
description = "FastAPI TTS Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "click>=8.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.27",
    # ML/DL Base
    "numpy>=1.26.0",
    "scipy==1.14.1",
    "onnxruntime==1.20.1",
    # Audio processing
    "soundfile==0.13.0",
    # Text processing
    "phonemizer==3.3.0",
    "regex==2024.11.6",
    # Utilities
    "aiofiles==23.2.1",
    "tqdm==4.67.1",
    "requests==2.32.3",
    "munch==4.0.0",
    "tiktoken==0.8.0",
    "loguru==0.7.3",
    "transformers==4.47.1",
    "openai>=1.59.6",
    "ebooklib>=0.18",
    "html2text>=2024.2.26",
    "pydub>=0.25.1",
]

[project.optional-dependencies]

cpu = [
    "torch>=2.6.0",
]
cu118 = [
    "torch>=2.6.0",
]
cu124 = [
    "torch>=2.6.0",
]
xpu = [
    "torch>=2.6.0",
    "pytorch-triton-xpu>=3.2.0 ; sys_platform == 'linux'",
]
rocm = [
    "torch>=2.5.1",
    "pytorch-triton-rocm>=3.1.0 ; sys_platform == 'linux'",
]
test = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "pytest-asyncio==0.23.5",
    "gradio>=5",
    "openai>=1.59.6",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
        { extra = "cu124" },
        { extra = "rocm" },
        { extra = "xpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "api/src"}
packages.find = {where = ["api/src"], namespaces = true}

[tool.pytest.ini_options]
testpaths = ["api/tests", "ui/tests"]
python_files = ["test_*.py"]
addopts = "--cov=api --cov=ui --cov-report=term-missing --cov-config=.coveragerc"
asyncio_mode = "strict"
